--- a/src/components/meetups/NewMeetupForm.module.css
+++ b/src/components/meetups/NewMeetupForm.module.css
@@ -25,6 +25,14 @@
 .actions {
   margin-top: 1rem;
   text-align: right;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+}
+
+.actions p{
+  color: green;
 }
 
 .actions button {
